@@ -103,12 +103,7 @@ public:
 
 protected:
 	//! This function should be called to attack an enemy.
-	//! 'attacking_unit':	the location of the attacking unit
-	//! 'target':			the location of the target unit.
-	//						This unit must be in range of the attacking unit's weapon
-	//! 'att_weapon':		the number of the weapon (0-based) which should be used in the attack.
-	//!					This must be a valid weapon of the attacking unit.
-	void attack_enemy(const location& attacking_unit, const location& target, int att_weapon, int def_weapon);
+	void attack_enemy(const location u, const location target, int att_weapon, int def_weapon);
 
 	//! This function should be called to move a unit.
 	//! Once the unit has been moved, its movement allowance is set to 0.
